# conexiones-aeropuertos

./: .gitignore  Aeropuerto.h  Boleto.h  CMakeLists.txt  Dia.cpp  Dia.h  Fecha.h  Horario.h  README.md  Vuelo.cpp  Vuelo.h  a.out  conexiones  main.cpp  makefile  notstd.h  readme.md
conexiones-aeropuertos.xcodeproj/: project.pbxproj
conexiones-aeropuertos.xcodeproj/project.xcworkspace/xcuserdata/javier.xcuserdatad/: UserInterfaceState.xcuserstate
conexiones-aeropuertos.xcodeproj/xcuserdata/javier.xcuserdatad/xcschemes/: xcschememanagement.plist
