cmake_minimum_required(VERSION 3.17)
project(conexiones_aeropuertos)

set(CMAKE_CXX_STANDARD 14)

add_executable(conexiones_aeropuertos
        conexiones-aeropuertos.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
        conexiones-aeropuertos.xcodeproj/project.xcworkspace/xcuserdata/javier.xcuserdatad/UserInterfaceState.xcuserstate
        conexiones-aeropuertos.xcodeproj/project.xcworkspace/contents.xcworkspacedata
        conexiones-aeropuertos.xcodeproj/xcuserdata/javier.xcuserdatad/xcschemes/xcschememanagement.plist
        conexiones-aeropuertos.xcodeproj/project.pbxproj
        main.cpp
        readme.md)
